# WaterQualityClassifier

./: .gitignore  README.md  __init__.py  classifiers.py  constants.py  pyproject.toml  utils.py  water_quality_standards_gui.py
templates/: stations_template.csv
