[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "waterqualityclassifier"
version = "0.0.1"
description = "Common water-quality classification helpers"
authors = [{name="You", email="you@example.com"}]
readme = "README.md"
dependencies = ["pandas"]
